fixed scrollbar

--- a/components/RightDrawer/styles.css
+++ b/components/RightDrawer/styles.css
@@ -1,4 +1,18 @@
 ::-webkit-scrollbar {
-  width: 0px;
-  height: 0px;
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(204, 205, 206);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(229 231 235);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(194, 196, 201);
 }
